fixing issue model